PROD-9-26-19/force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <inlineHelpText>If &quot;To Be Deleted&quot; is selected, all related Activities, Contacts, etc. will also be deleted.  If &quot;To Be Merged&quot; is selected, Activities, Contacts, etc. will reside under the merged Account.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>To Be Merged</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>To be discussed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>