PROD-9-26-19/force-app/main/default/objects/Account/fields/Active_Products__c.field-meta.xml
<CustomField>
    <fullName>Active_Products__c</fullName>
    <description>BAM Finance</description>
    <label>Active Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Renewables</fullName>
            </value>
            <value>
                <fullName>Lev Fin</fullName>
            </value>
            <value>
                <fullName>M&amp;A</fullName>
            </value>
            <value>
                <fullName>DCM</fullName>
            </value>
            <value>
                <fullName>ECM</fullName>
            </value>
            <value>
                <fullName>Derivatives</fullName>
            </value>
            <value>
                <fullName>USPP Arranger</fullName>
            </value>
            <value>
                <fullName>USPP Investor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>