PROD-9-26-19/force-app/main/default/objects/Account/fields/Active_Sub_Products__c.field-meta.xml
<CustomField>
    <fullName>Active_Sub_Products__c</fullName>
    <description>BAM Finance</description>
    <label>Active Sub-Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RE Development</fullName>
            </value>
            <value>
                <fullName>Multifamily</fullName>
            </value>
            <value>
                <fullName>Greenfield Devt</fullName>
            </value>
            <value>
                <fullName>Long term fixed rate</fullName>
            </value>
            <value>
                <fullName>Long term swaps</fullName>
            </value>
            <value>
                <fullName>Sub-IG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>