PROD-9-26-19/force-app/main/default/objects/Account/fields/Address_Block__c.field-meta.xml
<CustomField>
    <fullName>Address_Block__c</fullName>
    <formula>BillingStreet  + BR() +  BillingCity + IF(BillingCity !=null, &#39;,&#39;, &#39;&#39;) +  &#39; &#39; + BillingState  + &#39; &#39; +  BillingPostalCode +  BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Block</label>
    <type>Text</type>
</CustomField>