PROD-9-26-19/force-app/main/default/objects/Account/fields/Allocation_to_Private_Equity_bn__c.field-meta.xml
<CustomField>
    <fullName>Allocation_to_Private_Equity_bn__c</fullName>
    <description>Information pulled from Preqin</description>
    <inlineHelpText>Information pulled from Preqin</inlineHelpText>
    <label>Allocation to Private Equity ($bn)</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>