PROD-9-26-19/force-app/main/default/objects/Account/fields/Alternatives_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Alternatives_Consultant__c</fullName>
    <description>Roll up from consultant Relationships</description>
    <inlineHelpText>Roll up from consultant Relationships</inlineHelpText>
    <label>Consultant(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>