PROD-9-26-19/force-app/main/default/objects/Account/fields/BAC_Owner__c.field-meta.xml
<CustomField>
    <fullName>BAC_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BAC Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>