PROD-9-26-19/force-app/main/default/objects/Account/fields/BAM_Relationship_Notes__c.field-meta.xml
<CustomField>
    <fullName>BAM_Relationship_Notes__c</fullName>
    <description>To capture the nature of the relationship with the Company</description>
    <inlineHelpText>To capture the nature of the relationship with the Company</inlineHelpText>
    <label>BAM Relationship Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>