PROD-9-26-19/force-app/main/default/objects/Account/fields/BEP_Shareholder_Status__c.field-meta.xml
<CustomField>
    <fullName>BEP_Shareholder_Status__c</fullName>
    <formula>if( BEP_Units_Shares__c &gt; 0, &quot;Current Shareholder&quot; ,
If(No_of_BEP_Shareholder__c &gt; 0,&quot;Past/Target Shareholder&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Autopopulated Field.</inlineHelpText>
    <label>BEP Shareholder Status</label>
    <type>Text</type>
</CustomField>