PROD-9-26-19/force-app/main/default/objects/Account/fields/BIM_Funds_Invested_In__c.field-meta.xml
<CustomField>
    <fullName>BIM_Funds_Invested_In__c</fullName>
    <description>Roll up field to list all the BIM funds</description>
    <inlineHelpText>Roll up field to list all the BIM funds</inlineHelpText>
    <label>PSG Funds Invested In</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>