PROD-9-26-19/force-app/main/default/objects/Account/fields/BIM_Primary_Mktg_Rep__c.field-meta.xml
<CustomField>
    <fullName>BIM_Primary_Mktg_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSG Primary Mktg Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>