PROD-9-26-19/force-app/main/default/objects/Account/fields/BIM_Relationship_notes__c.field-meta.xml
<CustomField>
    <fullName>BIM_Relationship_notes__c</fullName>
    <label>PSG Relationship Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>