PROD-9-26-19/force-app/main/default/objects/Account/fields/BIM_Relationship_Type_del__c.field-meta.xml
<CustomField>
    <fullName>BIM_Relationship_Type_del__c</fullName>
    <label>*PSG Relationship Type_del</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Former Client</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Custodian</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>