PROD-9-26-19/force-app/main/default/objects/Account/fields/BIM_Secondary_Mktg_Rep__c.field-meta.xml
<CustomField>
    <fullName>BIM_Secondary_Mktg_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSG Secondary Mktg Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>