PROD-9-26-19/force-app/main/default/objects/Account/fields/BLP_Owner__c.field-meta.xml
<CustomField>
    <fullName>BLP_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BLP Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>