PROD-9-26-19/force-app/main/default/objects/Account/fields/BOX_Shareholder_Status__c.field-meta.xml
<CustomField>
    <fullName>BOX_Shareholder_Status__c</fullName>
    <formula>if(  BOX_Units_Shares__c &gt; 0,&quot;Current Shareholder&quot;,
If(No_of_BOX_Shareholder__c &gt; 0,&quot;Past/Target Shareholder&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Autopopulated Field.</inlineHelpText>
    <label>BOX Shareholder Status</label>
    <type>Text</type>
</CustomField>