PROD-9-26-19/force-app/main/default/objects/Account/fields/BOX_Units_Shares__c.field-meta.xml
<CustomField>
    <fullName>BOX_Units_Shares__c</fullName>
    <label>BOX # Units / Shares</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>