PROD-9-26-19/force-app/main/default/objects/Account/fields/BPO_Shareholder_Status__c.field-meta.xml
<CustomField>
    <fullName>BPO_Shareholder_Status__c</fullName>
    <formula>if( BPO_Units_Shares__c &gt; 0,&quot;Current Shareholder&quot;,
if(No_of_BPO_Shareholder__c &gt; 0,&quot;Past/Target Shareholder&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Autopopulated Field.</inlineHelpText>
    <label>BPO Shareholder Status</label>
    <type>Text</type>
</CustomField>