PROD-9-26-19/force-app/main/default/objects/Account/fields/BPY_Units_Shares__c.field-meta.xml
<CustomField>
    <fullName>BPY_Units_Shares__c</fullName>
    <label>BPY # Units / Shares</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>