PROD-9-26-19/force-app/main/default/objects/Account/fields/Bridge_Lending__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Lending__c</fullName>
    <label>Bridge Lending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>