PROD-9-26-19/force-app/main/default/objects/Account/fields/Brookfield_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Brookfield_Affiliate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An affiliate of Brookfield</description>
    <inlineHelpText>An affiliate of Brookfield</inlineHelpText>
    <label>Brookfield Affiliate</label>
    <type>Checkbox</type>
</CustomField>