PROD-9-26-19/force-app/main/default/objects/Account/fields/Brookfield_Business_Group__c.field-meta.xml
<CustomField>
    <fullName>Brookfield_Business_Group__c</fullName>
    <description>Brookfield Business Groups. This field is used for Data management and related to different global action page layouts 
This field refers to Salesforce User profile =Business group.</description>
    <inlineHelpText>Select your associated business group</inlineHelpText>
    <label>Brookfield Business Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAC</fullName>
            </value>
            <value>
                <fullName>BAM</fullName>
            </value>
            <value>
                <fullName>BAM Finance</fullName>
            </value>
            <value>
                <fullName>BBP</fullName>
            </value>
            <value>
                <fullName>BBU</fullName>
            </value>
            <value>
                <fullName>BFIN</fullName>
            </value>
            <value>
                <fullName>BIG</fullName>
            </value>
            <value>
                <fullName>BPG</fullName>
            </value>
            <value>
                <fullName>BPO</fullName>
            </value>
            <value>
                <fullName>BRP</fullName>
            </value>
            <value>
                <fullName>BTG</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>IDI</fullName>
            </value>
            <value>
                <fullName>IDI Gazely</fullName>
            </value>
            <value>
                <fullName>PFG</fullName>
            </value>
            <value>
                <fullName>PSG</fullName>
            </value>
            <value>
                <fullName>TSG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>