PROD-9-26-19/force-app/main/default/objects/Account/fields/BRP_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>BRP_Account_Type__c</fullName>
    <description>The relationship type of for BRP</description>
    <inlineHelpText>Selection details:
Aggregation (non-public power) = Community Choice Aggregations
MUSH = Municipalities (building load), universities, schools, hospitals
Public Power for Government, Municipal Utilities, Co-ops
Trading and Marketing= FI,IPPs,Wholesale</inlineHelpText>
    <label>BRP Account Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisor/Consultant</fullName>
                <label>Advisor/Broker/Consultant</label>
            </value>
            <value>
                <fullName>Aggregation (non-public power)</fullName>
            </value>
            <value>
                <fullName>Corporate Buyer</fullName>
                <label>C&amp;I Buyer</label>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>MUSH</fullName>
            </value>
            <value>
                <fullName>Public Power</fullName>
            </value>
            <value>
                <fullName>RetailService Provider</fullName>
                <label>Retail Supplier</label>
            </value>
            <value>
                <fullName>Trading and Marketing</fullName>
            </value>
            <value>
                <fullName>Renewable Energy Supplier / Owner</fullName>
            </value>
            <value>
                <fullName>Utility: Regulated</fullName>
            </value>
            <value>
                <fullName>Utility: Unregulated</fullName>
            </value>
            <value>
                <fullName>Aggregator</fullName>
                <isActive>false</isActive>
                <label>Aggregator</label>
            </value>
            <value>
                <fullName>Broker</fullName>
                <isActive>false</isActive>
                <label>Broker</label>
            </value>
            <value>
                <fullName>Business Development</fullName>
                <isActive>false</isActive>
                <label>Business Development</label>
            </value>
            <value>
                <fullName>Buyer</fullName>
                <isActive>false</isActive>
                <label>Buyer</label>
            </value>
            <value>
                <fullName>Conference Organizer</fullName>
                <isActive>false</isActive>
                <label>Conference Organizer</label>
            </value>
            <value>
                <fullName>Generation Management Partner</fullName>
                <isActive>false</isActive>
                <label>Generation Management Partner</label>
            </value>
            <value>
                <fullName>Government</fullName>
                <isActive>false</isActive>
                <label>Government</label>
            </value>
            <value>
                <fullName>Higher Education</fullName>
                <isActive>false</isActive>
                <label>Higher Education</label>
            </value>
            <value>
                <fullName>Influencer</fullName>
                <isActive>false</isActive>
                <label>Influencer</label>
            </value>
            <value>
                <fullName>Intermediary/Broker</fullName>
                <isActive>false</isActive>
                <label>Intermediary/Broker</label>
            </value>
            <value>
                <fullName>Lobbyist/Energy Policy</fullName>
                <isActive>false</isActive>
                <label>Lobbyist/Energy Policy</label>
            </value>
            <value>
                <fullName>Market Maker</fullName>
                <isActive>false</isActive>
                <label>Market Maker</label>
            </value>
            <value>
                <fullName>Municipality</fullName>
                <isActive>false</isActive>
                <label>Municipality</label>
            </value>
            <value>
                <fullName>Regional Transmission Organization (RTO)</fullName>
                <isActive>false</isActive>
                <label>Regional Transmission Organization (RTO)</label>
            </value>
            <value>
                <fullName>Regulator</fullName>
                <isActive>false</isActive>
                <label>Regulator</label>
            </value>
            <value>
                <fullName>Stakeholder</fullName>
                <isActive>false</isActive>
                <label>Stakeholder</label>
            </value>
            <value>
                <fullName>Utility</fullName>
                <isActive>false</isActive>
                <label>Utility</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>