PROD-9-26-19/force-app/main/default/objects/Account/fields/BRP_North_America_NDA_End__c.field-meta.xml
<CustomField>
    <fullName>BRP_North_America_NDA_End__c</fullName>
    <label>BRP North America NDA End</label>
    <type>Date</type>
</CustomField>