PROD-9-26-19/force-app/main/default/objects/Account/fields/BRP_Region__c.field-meta.xml
<CustomField>
    <fullName>BRP_Region__c</fullName>
    <defaultValue>$Profile.Id</defaultValue>
    <description>This field is used for BRP sharing rules.and reporting filters to separate BRP business regions and data access.</description>
    <label>BRP Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRP_USA</fullName>
                <default>true</default>
                <label>BRP USA</label>
            </value>
            <value>
                <fullName>New England</fullName>
                <isActive>false</isActive>
                <label>New England</label>
            </value>
            <value>
                <fullName>PJM and West</fullName>
                <isActive>false</isActive>
                <label>PJM and West</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>