PROD-9-26-19/force-app/main/default/objects/Account/fields/Bucket_Size_Raised_Capital_by_Account__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Size_Raised_Capital_by_Account__c</fullName>
    <description>Bucket size for total raised capital per account</description>
    <formula>IF(PFG_Total_Raised_Capital__c&lt;=50999999,&quot;≤$50M&quot;,
IF(PFG_Total_Raised_Capital__c&lt;=100999999,&quot;$51M-$100M&quot;,
IF(PFG_Total_Raised_Capital__c&lt;=200999999,&quot;$101M-$200M&quot;,
IF(PFG_Total_Raised_Capital__c&lt;=300999999,&quot;$201M-$300M&quot;,
IF(PFG_Total_Raised_Capital__c&lt;=500999999,&quot;$301M-$500M&quot;,
IF(PFG_Total_Raised_Capital__c&lt;=999999999,&quot;$501M-$999M&quot;,
IF(PFG_Total_Raised_Capital__c&gt;=1000000000,&quot;≥$1B&quot;,&quot;&quot;
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Bucket size for total raised capital per account</inlineHelpText>
    <label>Bucket Size - Raised Capital by Account</label>
    <type>Text</type>
</CustomField>