PROD-9-26-19/force-app/main/default/objects/Account/fields/CIIN_Name__c.field-meta.xml
<CustomField>
    <fullName>CIIN_Name__c</fullName>
    <description>CIIN Name for matching exercises</description>
    <inlineHelpText>CIIN Name for matching exercises</inlineHelpText>
    <label>CIIN Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>