PROD-9-26-19/force-app/main/default/objects/Account/fields/CIIN_Number__c.field-meta.xml
<CustomField>
    <fullName>CIIN_Number__c</fullName>
    <description>CIIN Database number to use for matching</description>
    <inlineHelpText>CIIN Database number to use for matching</inlineHelpText>
    <label>CIIN Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>