PROD-9-26-19/force-app/main/default/objects/Account/fields/Consultant1__c.field-meta.xml
<CustomField>
    <fullName>Consultant1__c</fullName>
    <label>Consultant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mercer</fullName>
            </value>
            <value>
                <fullName>Willis Towers Watson</fullName>
            </value>
            <value>
                <fullName>Aon Hewitt</fullName>
            </value>
            <value>
                <fullName>Morneau Shepell</fullName>
            </value>
            <value>
                <fullName>Eckler Ltd</fullName>
            </value>
            <value>
                <fullName>Buck Consultants Limited</fullName>
            </value>
            <value>
                <fullName>Coughlin &amp; Associates</fullName>
            </value>
            <value>
                <fullName>Robertson Eadie &amp; Associates</fullName>
            </value>
            <value>
                <fullName>The Segal Group</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>