PROD-9-26-19/force-app/main/default/objects/Account/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <label>Consultant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>