PROD-9-26-19/force-app/main/default/objects/Account/fields/Crossover_Value__c.field-meta.xml
<CustomField>
    <fullName>Crossover_Value__c</fullName>
    <description>Crossover value for New Investor, Crossover and Re-up chart</description>
    <formula>PFG_Total_Raised_Capital__c - New_Investor_Value__c- Re_up_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crossover Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>