PROD-9-26-19/force-app/main/default/objects/Account/fields/Current_Activities__c.field-meta.xml
<CustomField>
    <fullName>Current_Activities__c</fullName>
    <label>Current Activities</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>