PROD-9-26-19/force-app/main/default/objects/Account/fields/Date_of_Initial_Contact__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Initial_Contact__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date of Initial Contact</label>
    <type>Date</type>
</CustomField>