PROD-9-26-19/force-app/main/default/objects/Account/fields/Date_of_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Activity__c</fullName>
    <label>Date of Last Activity</label>
    <type>Date</type>
</CustomField>