PROD-9-26-19/force-app/main/default/objects/Account/fields/Date_of_Pre_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Pre_Qualification__c</fullName>
    <label>Date of Pre-Qualification</label>
    <type>Date</type>
</CustomField>