PROD-9-26-19/force-app/main/default/objects/Account/fields/ECI_Partner__c.field-meta.xml
<CustomField>
    <fullName>ECI_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Effectively Connected Income</inlineHelpText>
    <label>ECI Partner</label>
    <type>Checkbox</type>
</CustomField>