PROD-9-26-19/force-app/main/default/objects/Account/fields/Equity_AUM_MM__c.field-meta.xml
<CustomField>
    <fullName>Equity_AUM_MM__c</fullName>
    <label>Equity AUM ($MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>