PROD-9-26-19/force-app/main/default/objects/Account/fields/INQ__SLASerialNumber__c.field-meta.xml
<CustomField>
    <fullName>INQ__SLASerialNumber__c</fullName>
    <label>SLA Serial Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>