PROD-9-26-19/force-app/main/default/objects/Account/fields/Investment_Assets_AUM__c.field-meta.xml
<CustomField>
    <fullName>Investment_Assets_AUM__c</fullName>
    <description>Assets under Management for the Account</description>
    <inlineHelpText>Assets under Management for the Account</inlineHelpText>
    <label>Firm AUM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>