PROD-9-26-19/force-app/main/default/objects/Account/fields/InvestmentSize__c.field-meta.xml
<CustomField>
    <fullName>InvestmentSize__c</fullName>
    <label>Investment Size</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;= $50MM</fullName>
            </value>
            <value>
                <fullName>$50MM - $250MM</fullName>
            </value>
            <value>
                <fullName>$250MM - $500MM</fullName>
            </value>
            <value>
                <fullName>$500MM+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>