PROD-9-26-19/force-app/main/default/objects/Account/fields/InvestmentType__c.field-meta.xml
<CustomField>
    <fullName>InvestmentType__c</fullName>
    <label>Investment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>