PROD-9-26-19/force-app/main/default/objects/Account/fields/Investor_Type__c.field-meta.xml
<CustomField>
    <fullName>Investor_Type__c</fullName>
    <description>Inventory Type field has been referred on following places:
Opportunity: 
Field Name: Reporting_Investor_Type__c, Investor_Type__c, Account_Type__c
-----
Investor Position: 
Field Name: Investor_Type__c
                       Reporting_Investor_Type__c
-----
Compliance: 
Field Name: Investor_Type__c
---
Object: Investor Position
Field: Classification 
Action: Optimized formula which was fixed by Pal yesterday. 
https://na57.salesforce.com/00N33000002QBXu?setupid=CustomObjects</description>
    <inlineHelpText>Type of investor of the Account</inlineHelpText>
    <label>Investor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset Manager</fullName>
            </value>
            <value>
                <fullName>Bank / Financial Institution</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Endowment / Foundation</fullName>
            </value>
            <value>
                <fullName>Single Family Office</fullName>
            </value>
            <value>
                <fullName>Government / Sovereign Wealth</fullName>
            </value>
            <value>
                <fullName>Hospitals / Health Care</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Labor Organization</fullName>
            </value>
            <value>
                <fullName>OCIO</fullName>
            </value>
            <value>
                <fullName>Private Bank / Wirehouse</fullName>
            </value>
            <value>
                <fullName>Private Pension</fullName>
            </value>
            <value>
                <fullName>Public Pension</fullName>
            </value>
            <value>
                <fullName>RIA / Wealth Manager</fullName>
            </value>
            <value>
                <fullName>UHNW</fullName>
            </value>
            <value>
                <fullName>Multi Family Office</fullName>
            </value>
            <value>
                <fullName>Non-Investor</fullName>
            </value>
            <value>
                <fullName>Accountants</fullName>
            </value>
            <value>
                <fullName>Lawyers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>