PROD-9-26-19/force-app/main/default/objects/Account/fields/IRDP__c.field-meta.xml
<CustomField>
    <fullName>IRDP__c</fullName>
    <description>Investor Relationship Development Program</description>
    <inlineHelpText>Investor Relationship Development Program</inlineHelpText>
    <label>IRDP Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
                <isActive>false</isActive>
                <label>--None--</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>