PROD-9-26-19/force-app/main/default/objects/Account/fields/Key_Executive_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Key_Executive_Contacts__c</fullName>
    <label>Key Executive Contacts</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>