PROD-9-26-19/force-app/main/default/objects/Account/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailing Address</label>
    <type>Checkbox</type>
</CustomField>