PROD-9-26-19/force-app/main/default/objects/Account/fields/Merge_Delete_Note__c.field-meta.xml
<CustomField>
    <fullName>Merge_Delete_Note__c</fullName>
    <inlineHelpText>Enter additional comments if required for records marked for Deletion/Merge.  
If Merged, specify the Account to merge under.</inlineHelpText>
    <label>Merge/Delete Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>